fix: correct hover effect on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -73,10 +73,6 @@ a:visited {
     color:  rgb(168 100 90);
 }
 
-a:hover {
-    color:  rgb(241, 112, 87);
-}
-
 /* -- Кнопка вверх -- */
 
 .up-btn {
@@ -87,14 +83,6 @@ a:hover {
     text-align: right;
     width: 105%;
     -webkit-tap-highlight-color: transparent;
-}
-  
-.up-btn:hover {
-    cursor: pointer;
-}
-
-.up-btn:hover svg path {
-    fill: rgb(241, 112, 87);
 }
   
 /* --------------------------  Секции - общее ------------------------ */
@@ -147,11 +135,6 @@ header {
     border: 1px solid rgb(126 126 126);
     padding: 5px 12px;
     border-radius: 2px;
-}
-
-.nav a:hover {
-    border: 1px solid rgb(241, 112, 87);
-    background-color: #faf8f7;
 }
 
 .nav .chosen,
@@ -252,10 +235,6 @@ header {
 
 .contacts-portfolio-block a {
     text-decoration: none;
-}
-
-.contacts-portfolio-block a:hover svg path {
-    fill: rgb(241, 112, 87);
 }
 
 .contacts {
@@ -539,10 +518,6 @@ header {
    text-decoration: none;
 }
 
-.github-link-block a:hover svg path {
-    fill: rgb(241, 112, 87);
-}
-
 /* ---------------- Блок проектов ---------------*/
 
 .project {
@@ -563,14 +538,6 @@ header {
     /*margin-top: 15px;*/
 }
 
-/*.to-do-list-more {
-    display: none;
-}*/
-
-.project a:hover svg path {
-    fill: rgb(241, 112, 87);
-}
-
 .project a {
     text-decoration: none;
 }
@@ -589,10 +556,6 @@ header {
     margin-left: auto;
 }
 
-.show-more-btn:hover svg path {
-    fill:  rgb(168 100 90);
-}
-
 .hide-more-btn {
     display: flex;
     column-gap: 7px;
@@ -600,20 +563,9 @@ header {
     margin-left: auto;
 }
 
-.hide-more-btn:hover svg path {
-    fill:  rgb(168 100 90);
-}
-
 #experience button {
     padding: 4px 8px;
     border: 1px solid rgb(61, 61, 61);
-}
- 
-#experience button:hover {
-    cursor: pointer;
-    color:  rgb(168 100 90);
-    border: 1px solid rgb(168 100 90);
-    background-color: #faf8f7;
 }
 
 /* --------- To Do List ---------- */
@@ -908,8 +860,4 @@ footer {
     grid-template-rows: 100%;
     align-items: center;
     justify-items: start;
-}
-
-.contact-icons svg:hover path {
-    fill: rgb(241, 112, 87);
 }
